Add: Added all the elements to the nav section

--- a/index.html
+++ b/index.html
@@ -5,5 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matchpet</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <!-- Nav section -->
+      <nav>
+        <img src="img/icon_logo.svg" alt="Matchpet logo" class="logo" />
+        <ul>
+          <li class="nav__item--desktop">
+            <a href="#" class="nav__link--desktop">Nossos pets</a>
+          </li>
+          <li class="nav__item--desktop">
+            <a href="#" class="nav__link--desktop">Quem somos</a>
+          </li>
+          <li class="nav__item--desktop">
+            <a href="#" class="nav__link--desktop">Contato</a>
+          </li>
+          <li class="nav__item--desktop">
+            <a href="#" class="nav__link--desktop">Suporte</a>
+          </li>
+        </ul>
+        <a href="#" class="btn btn--white">Entrar</a>
+        <img src="img/icon_menu.svg" alt="Menu icon" class="menu" />
+      </nav>
+    </header>
+  </body>
 </html>
