--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="line line-2"></div>
         <div class="line line-3"></div>
       </label>
-      <nav class="navigation hidden is-active">
+      <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
             <a href="#" class="navigation__link">Nossos pets</a>
