--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/x-icon" href="/img/icon_favicon.svg" />
   </head>
   <body>
+
+    <!--Header and navigation-->
+
     <header class="header">
       <div class="header__left">
         <img src="/img/icon_logo.svg" class="header__logo" />
@@ -38,6 +41,22 @@
         </nav>
         </div>
     </header>
+
+    <!--Homepage-->
+
+    <section class="homepage">
+      <div class="homepage__picture">
+        <div class="homepage__picture__circle--orange"></div>
+        <img class="homepage__picture__dog" src="/img/picture__dog--main.svg">
+      </div>
+      <div class="homepage__text-and-buttons">
+        <h1 class="homepage__text-and-buttons__main-title">O amigo que você procura está aqui!</h1>
+        <h2 class="homepage__text-and-buttons__sub-title">Por trás de cada olhar curioso, existe um pet incrível esperando por um lar cheio de amor </h2>
+        <button class="homepage__text-and-buttons__adoption-btn">Quero adotar</button>
+        <button class="homepage__text-and-buttons__donation-btn">Fazer doação</button>
+      </div>
+
+    </section>
     <script src="/js/scripts.js"></script>
   </body>
 </html>
