Add: Created homepage on mobile

--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
     <!--Homepage-->
 
     <section class="homepage">
+
       <div class="homepage__picture">
         <div class="homepage__picture__circle--orange"></div>
         <img class="homepage__picture__dog" src="/img/picture__dog--main.svg">
       </div>
+
       <div class="homepage__text-and-buttons">
+        <img class="homepage__text-and-buttons__heart-pawn" src="/img/icon_heart-pawn.svg">
         <h1 class="homepage__text-and-buttons__main-title">O amigo que você procura está aqui!</h1>
-        <h2 class="homepage__text-and-buttons__sub-title">Por trás de cada olhar curioso, existe um pet incrível esperando por um lar cheio de amor </h2>
+        <p class="homepage__text-and-buttons__sub-title">Por trás de cada olhar curioso, existe um pet incrível esperando por um lar cheio de amor.</p>
         <button class="homepage__text-and-buttons__adoption-btn">Quero adotar</button>
         <button class="homepage__text-and-buttons__donation-btn">Fazer doação</button>
       </div>
