Add: Added homepage styles to desktop devices

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" type="image/x-icon" href="/img/icon_favicon.svg" />
   </head>
   <body>
-
     <!--Header and navigation-->
 
     <header class="header">
@@ -38,27 +37,39 @@
         </ul>
         <div class="header__right">
           <button class="navigation__btn btn">Entrar</button>
-        </nav>
         </div>
+      </nav>
     </header>
 
     <!--Homepage-->
 
     <section class="homepage">
-
       <div class="homepage__picture">
         <div class="homepage__picture__circle--orange"></div>
-        <img class="homepage__picture__dog" src="/img/picture__dog--main.svg">
+        <img class="homepage__picture__dog" src="/img/picture_dog--main.svg" />
       </div>
 
       <div class="homepage__text-and-buttons">
-        <img class="homepage__text-and-buttons__heart-pawn" src="/img/icon_heart-pawn.svg">
-        <h1 class="homepage__text-and-buttons__main-title">O amigo que você procura está aqui!</h1>
-        <p class="homepage__text-and-buttons__sub-title">Por trás de cada olhar curioso, existe um pet incrível esperando por um lar cheio de amor.</p>
-        <button class="homepage__text-and-buttons__adoption-btn">Quero adotar</button>
-        <button class="homepage__text-and-buttons__donation-btn">Fazer doação</button>
+        <img
+          class="homepage__text-and-buttons__heart-pawn"
+          src="/img/icon_heart-pawn.svg"
+        />
+        <h1 class="homepage__text-and-buttons__main-title">
+          O amigo que você procura está aqui!
+        </h1>
+        <p class="homepage__text-and-buttons__sub-title">
+          Por trás de cada olhar curioso, existe um pet incrível esperando por
+          um lar cheio de amor.
+        </p>
+        <div class="homepage__buttons">
+          <button class="homepage__text-and-buttons__adoption-btn">
+            Quero adotar
+          </button>
+          <button class="homepage__text-and-buttons__donation-btn">
+            Fazer doação
+          </button>
+        </div>
       </div>
-
     </section>
     <script src="/js/scripts.js"></script>
   </body>
