Add: Added typography for font-weight and the headings and paragraphs for the featured pets section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
         </div>
       </div>
     </section>
+
+    <!--Featured pets-->
+    <section class="featured-pets">
+      <p class="featured-pets__slogan">Se apaixone!</p>
+      <h2 class="featured-pets__title">Conheça alguns de nossos peludos</h2>
+      <p class="featured-pets__paragraph">
+        No olhar de um novo amigo, mora um mundo de carinho pronto para ser seu.
+      </p>
+    </section>
+
     <script src="/js/scripts.js"></script>
   </body>
 </html>
