Add: Created the card component and started the _featuredPets section on mobile

--- a/index.html
+++ b/index.html
@@ -79,6 +79,56 @@
       <p class="featured-pets__paragraph">
         No olhar de um novo amigo, mora um mundo de carinho pronto para ser seu.
       </p>
+
+      <!--Featured pets card slider-->
+
+      <div class="carousel-wrapper">
+        <ul class="carousel">
+          <li class="card">
+            <div class="card__img">
+              <img
+                src="/img/picture_dog--frederico.svg"
+                alt="Cachorro chamado Frederico"
+              />
+            </div>
+            <div class="card__naming">
+              <p class="card__naming--name">Frederico</p>
+              <img
+                class="card__naming--icon"
+                src="/img/icon_like.svg"
+                alt="Ícone favoritar pet"
+              />
+            </div>
+            <div class="card__description">
+              <img
+                class="card__description--icon-pet"
+                src="/img/icon_dog-icon.svg"
+                alt="Ícone cachorro fofo"
+              />
+              <div class="card__description__age-gender-size">
+                <p class="card__description--age">1 ano</p>
+                <p class="card__description--gender">Macho</p>
+                <p class="card__description--size">M</p>
+              </div>
+              <div class="card__description__pin-location">
+                <img
+                  class="card__description--icon-pin-"
+                  src="/img/icon_pin.svg"
+                  alt="Ícone de alfinete"
+                />
+                <p class="card__description--location">Marau, RS</p>
+              </div>
+            </div>
+
+            <button class="card__description--button">Quero adotar</button>
+          </li>
+        </ul>
+        <h3 class="featured-pets__adoption-link">
+          <a href="#" class="featured-pets__adoption-link--link"
+            >Não posso adotar agora, mas quero ajudar!</a
+          >
+        </h3>
+      </div>
     </section>
 
     <script src="/js/scripts.js"></script>
