Add: Added initial carousel on mobile

--- a/index.html
+++ b/index.html
@@ -122,6 +122,122 @@
 
             <button class="card__description--button">Quero adotar</button>
           </li>
+
+          <li class="card">
+            <div class="card__img">
+              <img
+                src="/img/picture_cat--aurora.svg"
+                alt="Cachorro chamado Frederico"
+              />
+            </div>
+            <div class="card__naming">
+              <p class="card__naming--name">Aurora</p>
+              <img
+                class="card__naming--icon"
+                src="/img/icon_like.svg"
+                alt="Ícone favoritar pet"
+              />
+            </div>
+            <div class="card__description">
+              <img
+                class="card__description--icon-pet"
+                src="/img/icon_cat--icon.svg"
+                alt="Ícone gato fofo"
+              />
+              <div class="card__description__age-gender-size">
+                <p class="card__description--age">1 ano</p>
+                <p class="card__description--gender">Fêmea</p>
+                <p class="card__description--size">P</p>
+              </div>
+              <div class="card__description__pin-location">
+                <img
+                  class="card__description--icon-pin-"
+                  src="/img/icon_pin.svg"
+                  alt="Ícone de alfinete"
+                />
+                <p class="card__description--location">Marau, RS</p>
+              </div>
+            </div>
+
+            <button class="card__description--button">Quero adotar</button>
+          </li>
+
+          <li class="card">
+            <div class="card__img">
+              <img
+                src="/img/picture_cat--farofa.svg"
+                alt="Cachorro chamado Frederico"
+              />
+            </div>
+            <div class="card__naming">
+              <p class="card__naming--name">Farofa</p>
+              <img
+                class="card__naming--icon"
+                src="/img/icon_like.svg"
+                alt="Ícone favoritar pet"
+              />
+            </div>
+            <div class="card__description">
+              <img
+                class="card__description--icon-pet"
+                src="/img/icon_cat--icon.svg"
+                alt="Ícone gato fofo"
+              />
+              <div class="card__description__age-gender-size">
+                <p class="card__description--age">3 anos</p>
+                <p class="card__description--gender">Macho</p>
+                <p class="card__description--size">P</p>
+              </div>
+              <div class="card__description__pin-location">
+                <img
+                  class="card__description--icon-pin-"
+                  src="/img/icon_pin.svg"
+                  alt="Ícone de alfinete"
+                />
+                <p class="card__description--location">Marau, RS</p>
+              </div>
+            </div>
+            <button class="card__description--button">Quero adotar</button>
+          </li>
+
+          <li class="card">
+            <div class="card__img">
+              <img
+                src="/img/picture_dog--theo.svg"
+                alt="Cachorro chamado Théo"
+              />
+            </div>
+            <div class="card__naming">
+              <p class="card__naming--name">Théo</p>
+              <img
+                class="card__naming--icon"
+                src="/img/icon_like.svg"
+                alt="Ícone favoritar pet"
+              />
+            </div>
+            <div class="card__description">
+              <img
+                class="card__description--icon-pet"
+                src="/img/icon_dog-icon.svg"
+                alt="Ícone cachorro fofo"
+              />
+              <div class="card__description__age-gender-size">
+                <p class="card__description--age">6 anos</p>
+                <p class="card__description--gender">Macho</p>
+                <p class="card__description--size">P</p>
+              </div>
+              <div class="card__description__pin-location">
+                <img
+                  class="card__description--icon-pin-"
+                  src="/img/icon_pin.svg"
+                  alt="Ícone de alfinete"
+                />
+                <p class="card__description--location">Passo Fundo, RS</p>
+              </div>
+            </div>
+
+            <button class="card__description--button">Quero adotar</button>
+          </li>
         </ul>
         <h3 class="featured-pets__adoption-link">
           <a href="#" class="featured-pets__adoption-link--link"
