Add: Added why adoption section on mobile and created the adoptionCard component

--- a/index.html
+++ b/index.html
@@ -247,6 +247,62 @@
       </div>
     </section>
 
+    <!--Why adopt?-->
+
+    <section class="why-adopt">
+      <h1 class="why-adopt__title-main">Por que adotar?</h1>
+      <h5 class="why-adopt__title-secondary">
+        Entenda os benefícios de uma adoção conosco
+      </h5>
+      <div class="adoption-cards">
+        <div class="adoption-cards__card">
+          <div class="adoption-cards__header">
+            <img
+              alt="Coração e pata de pet"
+              class="adoption-cards__icon"
+              src="/img/icon_heart-pet.svg"
+            />
+            <h5 class="adoption-cards__title">Cada adoção é única</h5>
+          </div>
+          <p class="adoption-cards__paragraph">
+            Adotar significa dar início a uma nova jornada, cheia de histórias,
+            aprendizado e companheirismo que só um pet resgatado pode oferecer.
+          </p>
+        </div>
+
+        <div class="adoption-cards__card">
+          <div class="adoption-cards__header">
+            <img
+              alt="Casa de cachorro"
+              class="adoption-cards__icon"
+              src="/img/icon_dog-house.svg"
+            />
+            <h5 class="adoption-cards__title">Incentiva a adoção consciente</h5>
+          </div>
+          <p class="adoption-cards__paragraph">
+            Ao escolher adotar, você promove a responsabilidade e evita o
+            consumo desenfreado de animais, ajudando a controlar a
+            superpopulação.
+          </p>
+        </div>
+
+        <div class="adoption-cards__card">
+          <div class="adoption-cards__header">
+            <img
+              alt="Coração e pata de pet"
+              class="adoption-cards__icon"
+              src="/img/icon_heart-pet.svg"
+            />
+            <h5 class="adoption-cards__title">Benefícios para a saúde</h5>
+          </div>
+          <p class="adoption-cards__paragraph">
+            Ter um pet adotado pode reduzir o estresse, melhorar o humor e
+            aumentar a sensação de bem-estar, trazendo alegria para sua vida.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <script src="/js/scripts.js"></script>
   </body>
 </html>
