Add: Added why adoption section for desktops

--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
         <div class="adoption-cards__card">
           <div class="adoption-cards__header">
             <img
-              alt="Coração e pata de pet"
+              alt="Cruz de hospital e pata de pet"
               class="adoption-cards__icon"
-              src="/img/icon_heart-pet.svg"
+              src="/img/icon_health.svg"
             />
             <h5 class="adoption-cards__title">Benefícios para a saúde</h5>
           </div>
