Add: Added banner on desktop

--- a/index.html
+++ b/index.html
@@ -305,22 +305,24 @@
 
     <section class="banner">
       <div class="banner__header">
-        <img
-          alt="Coração e pata de pet"
-          class="banner__header__icon"
-          src="/img/icon_heart-pet.svg"
-        />
-        <h3 class="banner__header__title">
-          Atenção: este site contém altos níveis de fofura e risco de se
-          apaixonar.
-        </h3>
+        <div class="banner__container">
+          <img
+            alt="Coração e pata de pet"
+            class="banner__header__icon"
+            src="/img/icon_heart-pet.svg"
+          />
+          <h3 class="banner__header__title">
+            Atenção: este site contém altos níveis de fofura e risco de se
+            apaixonar.
+          </h3>
+        </div>
+        <p class="banner__paragraph">
+          O amor da sua vida pode ter patas, penas ou bigodes.
+        </p>
+        <button class="banner__button">Adotar pet</button>
       </div>
-      <p class="banner__paragraph">
-        O amor da sua vida pode ter patas, penas ou bigodes.
-      </p>
-      <button class="banner__button">Adotar pet</button>
       <img
-        src="/img/picture__puppie.svg"
+        src="/img/picture_puppie.svg"
         class="banner__puppie"
         alt="Filhote de cachorro fofinho"
       />
