Add: Created accordion on mobile

--- a/index.html
+++ b/index.html
@@ -303,6 +303,8 @@
       </div>
     </section>
 
+    <!--Banner-->
+
     <section class="banner">
       <div class="banner__header">
         <div class="banner__container">
@@ -326,6 +328,27 @@
         class="banner__puppie"
         alt="Filhote de cachorro fofinho"
       />
+    </section>
+
+    <!--FAQ-->
+
+    <section class="faq-accordion">
+      <div class="accordion">
+        <button class="accordion__header">
+          <span class="accordion__header--title"
+            >Quem pode realizar a adoção</span
+          >
+          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+        </button>
+        <div class="accordion__body">
+          <p class="accordion__paragraph">
+            Qualquer pessoa maior de 18 anos, com documento de identificação
+            válido e condições de oferecer um lar seguro e amoroso para o
+            animal. É importante ter consciência de que adotar é um compromisso
+            de longo prazo.
+          </p>
+        </div>
+      </div>
     </section>
 
     <script src="/js/scripts.js"></script>
