--- a/index.html
+++ b/index.html
@@ -333,11 +333,88 @@
     <!--FAQ-->
 
     <section class="faq-accordion">
+      <!--Accordion 1-->
       <div class="accordion">
         <button class="accordion__header">
           <span class="accordion__header--title"
             >Quem pode realizar a adoção</span
           >
+          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+        </button>
+        <div class="accordion__body">
+          <p class="accordion__paragraph">
+            Qualquer pessoa maior de 18 anos, com documento de identificação
+            válido e condições de oferecer um lar seguro e amoroso para o
+            animal. É importante ter consciência de que adotar é um compromisso
+            de longo prazo.
+          </p>
+        </div>
+      </div>
+
+      <!--Accordion 2-->
+
+      <div class="accordion">
+        <button class="accordion__header">
+          <span class="accordion__header--title"
+            >O que é preciso para adotar um pet?</span
+          >
+          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+        </button>
+        <div class="accordion__body">
+          <p class="accordion__paragraph">
+            Qualquer pessoa maior de 18 anos, com documento de identificação
+            válido e condições de oferecer um lar seguro e amoroso para o
+            animal. É importante ter consciência de que adotar é um compromisso
+            de longo prazo.
+          </p>
+        </div>
+      </div>
+
+      <!--Accordion 3-->
+
+      <div class="accordion">
+        <button class="accordion__header">
+          <span class="accordion__header--title"
+            >Quais são os documentos necessários para uma adoção?
+          </span>
+          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+        </button>
+        <div class="accordion__body">
+          <p class="accordion__paragraph">
+            Qualquer pessoa maior de 18 anos, com documento de identificação
+            válido e condições de oferecer um lar seguro e amoroso para o
+            animal. É importante ter consciência de que adotar é um compromisso
+            de longo prazo.
+          </p>
+        </div>
+      </div>
+
+      <!--Accordion 4-->
+
+      <div class="accordion">
+        <button class="accordion__header">
+          <span class="accordion__header--title"
+            >Após o preenchimento do formulário, quanto tempo devo aguardar?
+          </span>
+          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+        </button>
+        <div class="accordion__body">
+          <p class="accordion__paragraph">
+            Qualquer pessoa maior de 18 anos, com documento de identificação
+            válido e condições de oferecer um lar seguro e amoroso para o
+            animal. É importante ter consciência de que adotar é um compromisso
+            de longo prazo.
+          </p>
+        </div>
+      </div>
+
+      <!--Accordion 5-->
+
+      <div class="accordion">
+        <button class="accordion__header">
+          <span class="accordion__header--title"
+            >Adotei um pet e ele não se adaptou, é possível a devolução?
+          </span>
           <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
         </button>
         <div class="accordion__body">
