Add: Added and finished the rest of the faq section on mobile

--- a/index.html
+++ b/index.html
@@ -333,6 +333,9 @@
     <!--FAQ-->
 
     <section class="faq-accordion">
+      <p class="faq-accordion__paragraph">FAQ</p>
+      <h1 class="faq-accordion__title">Dúvidas frequentes</h1>
+
       <!--Accordion 1-->
       <div class="accordion">
         <button class="accordion__header">
@@ -425,6 +428,15 @@
             de longo prazo.
           </p>
         </div>
+      </div>
+
+      <div class="faq-accordion__footer">
+        <h5 class="faq-accordion__footer--title">Ainda ficou alguma dúvida?</h5>
+        <p class="faq-accordion__footer--paragraph">
+          Fique à vontade para nos escrever:
+          <span>contato@matchpet.com</span><br />
+          estamos aqui pra ajudar você (e seu futuro pet)!
+        </p>
       </div>
     </section>
 
