Add: Added accordion section for the desktop version

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       <div class="accordion">
         <button class="accordion__header">
           <span class="accordion__header--title"
-            >Quem pode realizar a adoção</span
+            >Quem pode realizar a adoção?</span
           >
           <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
         </button>
