Add: Added testimonial title and heading for mobile

--- a/index.html
+++ b/index.html
@@ -440,6 +440,19 @@
       </div>
     </section>
 
+    <!--Section testimonials-->
+    <section class="testimonials">
+      <div class="testimonials__heading">
+        <p class="testimonials__heading__feedback">
+          Feedback de quem já adotou
+        </p>
+        <h1 class="testimonials__heading__title--main">O que estão falando</h1>
+        <h3 class="testimonials__heading__title--secondary">
+          Pessoas que encontraram seu match perfeito
+        </h3>
+      </div>
+      <div class="testimonials__cards"></div>
+    </section>
     <script src="/js/scripts.js"></script>
   </body>
 </html>
