SEO: Added missing alt attributes and a meta description to the homepage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Página inicial de um projeto fictício sobre adoção de pets criado por Mainá Palacios e desenvolvido por Marlon Seben"
+    />
     <title>Matchpet</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" type="image/x-icon" href="/img/icon_favicon.svg" />
@@ -12,7 +16,11 @@
 
     <header class="header">
       <div class="header__left">
-        <img src="/img/icon_logo.svg" class="header__logo" />
+        <img
+          src="/img/icon_logo.svg"
+          class="header__logo"
+          alt="Matchpet logo"
+        />
       </div>
       <label for="checkbox" class="menu">
         <input type="checkbox" id="checkbox" hidden />
@@ -46,13 +54,18 @@
     <section class="homepage">
       <div class="homepage__picture">
         <div class="homepage__picture__circle--orange"></div>
-        <img class="homepage__picture__dog" src="/img/picture_dog--main.svg" />
+        <img
+          class="homepage__picture__dog"
+          src="/img/picture_dog--main.svg"
+          class="Foto de um cachorro feliz"
+        />
       </div>
 
       <div class="homepage__text-and-buttons">
         <img
           class="homepage__text-and-buttons__heart-pawn"
           src="/img/icon_heart-pawn.svg"
+          alt="Ícone coração e pata de pet"
         />
         <h1 class="homepage__text-and-buttons__main-title">
           O amigo que você procura está aqui!
@@ -342,7 +355,11 @@
           <span class="accordion__header--title"
             >Quem pode realizar a adoção?</span
           >
-          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+          <img
+            src="/img/icon_down-arrow.svg"
+            class="accordion__header--icon"
+            alt="Seta para baixo que exibe resposta da pergunta"
+          />
         </button>
         <div class="accordion__body">
           <p class="accordion__paragraph">
