Fix: The first fix didn´t work on mobile, added text-align center to the parent element of the bugged link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <img
           class="homepage__picture__dog"
           src="/img/picture_dog--main.svg"
-          class="Foto de um cachorro feliz"
+          alt="Foto de um cachorro feliz"
         />
       </div>
 
