Fix: Created a div to be around the buggy h3 to try to fix the bug with decentralized the text

--- a/index.html
+++ b/index.html
@@ -252,11 +252,13 @@
             <button class="card__description--button">Quero adotar</button>
           </li>
         </ul>
-        <h3 class="featured-pets__adoption-link">
-          <a href="#" class="featured-pets__adoption-link--link"
-            >Não posso adotar agora, mas quero ajudar!</a
-          >
-        </h3>
+        <div class="featured-pets__carousel-buttons">
+          <h3 class="featured-pets__adoption-link">
+            <a href="#" class="featured-pets__adoption-link--link"
+              >Não posso adotar agora, mas quero ajudar!</a
+            >
+          </h3>
+        </div>
       </div>
     </section>
 
