Add: Added testimonial cards on mobile

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
       <div class="carousel-wrapper">
         <ul class="carousel">
+          <li class="carousel__spacer"></li>
           <li class="card">
             <div class="card__img">
               <img
@@ -345,6 +346,43 @@
       />
     </section>
 
+        <!--Section testimonials-->
+    <section class="testimonials">
+      <div class="testimonials__heading">
+        <p class="testimonials__heading__feedback">
+          Feedback de quem já adotou
+        </p>
+        <h1 class="testimonials__heading__title--main">O que estão falando</h1>
+        <h3 class="testimonials__heading__title--secondary">
+          Pessoas que encontraram seu match perfeito
+        </h3>
+      </div>
+      <div class="carousel-wrapper">
+      <ul class="carousel">
+        <li class="carousel__spacer"></li>
+          <li class="testimonialCard">
+            <h6 class="testimonialCard__name">Pedro Eduardo</h6>
+            <p class="testimonialCard__location">Marau, RS</p>
+            <p class="testimonialCard__paragraph">Fui buscar companhia e encontrei uma amizade verdadeira graças ao processo de adoção. Agora não largo mais o Fred! </p>
+          </li>
+
+          <li class="testimonialCard">
+            <h5 class="testimonialCard__name">Maria Soares</h6>
+            <p class="testimonialCard__location">Florianóplis, SC</p>
+            <p class="testimonialCard__paragraph">O processo é feito com muito amor e carinho Recomendo pra qualquer pessoa que esteja pronta pra amar um pet de verdade</p>
+          </li>
+
+          <li class="testimonialCard">
+            <h6 class="testimonialCard__name">Joaquim Costa</h6>
+            <p class="testimonialCard__location">Casca, RS</p>
+            <p class="testimonialCard__paragraph">Nunca imaginei que um coelhinho fosse trazer tanta alegria! Adoção responsável, equipe atenciosa e um novo amor na minha vida </p>
+          </li>
+
+        </ul>
+</div>
+      </div>
+    </section>
+
     <!--FAQ-->
 
     <section class="faq-accordion">
@@ -459,19 +497,6 @@
       </div>
     </section>
 
-    <!--Section testimonials-->
-    <section class="testimonials">
-      <div class="testimonials__heading">
-        <p class="testimonials__heading__feedback">
-          Feedback de quem já adotou
-        </p>
-        <h1 class="testimonials__heading__title--main">O que estão falando</h1>
-        <h3 class="testimonials__heading__title--secondary">
-          Pessoas que encontraram seu match perfeito
-        </h3>
-      </div>
-      <div class="testimonials__cards"></div>
-    </section>
     <script src="/js/scripts.js"></script>
   </body>
 </html>
