Add: Added the testimonial section on desktop; Fix: General fixes and upgrades; Fix: Fixed the layout order to match the one from Figma

--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
               alt="Coração e pata de pet"
               class="adoption-cards__icon"
               src="/img/icon_heart-pet.svg"
+              loading="lazy"
             />
             <h5 class="adoption-cards__title">Cada adoção é única</h5>
           </div>
@@ -292,6 +293,7 @@
               alt="Casa de cachorro"
               class="adoption-cards__icon"
               src="/img/icon_dog-house.svg"
+              loading="lazy"
             />
             <h5 class="adoption-cards__title">Incentiva a adoção consciente</h5>
           </div>
@@ -308,6 +310,7 @@
               alt="Cruz de hospital e pata de pet"
               class="adoption-cards__icon"
               src="/img/icon_health.svg"
+              loading="lazy"
             />
             <h5 class="adoption-cards__title">Benefícios para a saúde</h5>
           </div>
@@ -343,44 +346,8 @@
         src="/img/picture_puppie.svg"
         class="banner__puppie"
         alt="Filhote de cachorro fofinho"
+        loading="lazy"
       />
-    </section>
-
-        <!--Section testimonials-->
-    <section class="testimonials">
-      <div class="testimonials__heading">
-        <p class="testimonials__heading__feedback">
-          Feedback de quem já adotou
-        </p>
-        <h1 class="testimonials__heading__title--main">O que estão falando</h1>
-        <h3 class="testimonials__heading__title--secondary">
-          Pessoas que encontraram seu match perfeito
-        </h3>
-      </div>
-      <div class="carousel-wrapper">
-      <ul class="carousel">
-        <li class="carousel__spacer"></li>
-          <li class="testimonialCard">
-            <h6 class="testimonialCard__name">Pedro Eduardo</h6>
-            <p class="testimonialCard__location">Marau, RS</p>
-            <p class="testimonialCard__paragraph">Fui buscar companhia e encontrei uma amizade verdadeira graças ao processo de adoção. Agora não largo mais o Fred! </p>
-          </li>
-
-          <li class="testimonialCard">
-            <h5 class="testimonialCard__name">Maria Soares</h6>
-            <p class="testimonialCard__location">Florianóplis, SC</p>
-            <p class="testimonialCard__paragraph">O processo é feito com muito amor e carinho Recomendo pra qualquer pessoa que esteja pronta pra amar um pet de verdade</p>
-          </li>
-
-          <li class="testimonialCard">
-            <h6 class="testimonialCard__name">Joaquim Costa</h6>
-            <p class="testimonialCard__location">Casca, RS</p>
-            <p class="testimonialCard__paragraph">Nunca imaginei que um coelhinho fosse trazer tanta alegria! Adoção responsável, equipe atenciosa e um novo amor na minha vida </p>
-          </li>
-
-        </ul>
-</div>
-      </div>
     </section>
 
     <!--FAQ-->
@@ -494,6 +461,43 @@
           <span>contato@matchpet.com</span><br />
           estamos aqui pra ajudar você (e seu futuro pet)!
         </p>
+      </div>
+    </section>
+
+    <!--Section testimonials-->
+    <section class="testimonials">
+      <div class="testimonials__heading">
+        <p class="testimonials__heading__feedback">
+          Feedback de quem já adotou
+        </p>
+        <h1 class="testimonials__heading__title--main">O que estão falando</h1>
+        <h3 class="testimonials__heading__title--secondary">
+          Pessoas que encontraram seu match perfeito
+        </h3>
+      </div>
+      <div class="carousel-wrapper">
+      <ul class="carousel">
+        <li class="carousel__spacer"></li>
+          <li class="testimonialCard">
+            <h6 class="testimonialCard__name">Pedro Eduardo</h6>
+            <p class="testimonialCard__location">Marau, RS</p>
+            <p class="testimonialCard__paragraph">Fui buscar companhia e encontrei uma amizade verdadeira graças ao processo de adoção. Agora não largo mais o Fred! </p>
+          </li>
+
+          <li class="testimonialCard">
+            <h5 class="testimonialCard__name">Maria Soares</h6>
+            <p class="testimonialCard__location">Florianóplis, SC</p>
+            <p class="testimonialCard__paragraph">O processo é feito com muito amor e carinho Recomendo pra qualquer pessoa que esteja pronta pra amar um pet de verdade</p>
+          </li>
+
+          <li class="testimonialCard">
+            <h6 class="testimonialCard__name">Joaquim Costa</h6>
+            <p class="testimonialCard__location">Casca, RS</p>
+            <p class="testimonialCard__paragraph">Nunca imaginei que um coelhinho fosse trazer tanta alegria! Adoção responsável, equipe atenciosa e um novo amor na minha vida </p>
+          </li>
+
+        </ul>
+</div>
       </div>
     </section>
 
