Add: Added footer section on mobile

--- a/index.html
+++ b/index.html
@@ -501,6 +501,60 @@
       </div>
     </section>
 
+<footer class="footer">
+
+  <img src="/img/icon_logo-alternative.svg" class="footer__logo" alt="Logo do MatchPet">
+  <p class="footer__quote">Mude uma vida: adote!</p>
+  <p class="footer__email">contato@matchpet.com</p>
+
+  <div class="footer__socials">
+    <img src="/img/icon_whatsapp.svg" alt="Icone do Whatsapp" class="footer__socials__logo--whatsapp">
+    <img src="/img/icon_instagram.svg" alt="Icone do Instagram" class="footer__socials__logo--instagram">
+    <img src="/img/icon_youtube.svg" alt="Icone do Youtube" class="footer__socials__logo--youtube">
+    <img src="/img/icon_facebook.svg" alt="Icone do Facebook" class="footer__socials__logo--facebook">
+  </div>
+
+   <div class="footer__links">
+    
+    <div class="footer__section footer__section--pets">
+      <h5 class="footer__title">Nossos Pets</h5>
+      <ul class="footer__list">
+        <li class="footer__item"><a href="#" class="footer__link">Cachorros</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Gatos</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Roedores</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Aves</a></li>
+      </ul>
+    </div>
+
+    <div class="footer__section footer__section--solutions">
+      <h5 class="footer__title">Soluções</h5>
+      <ul class="footer__list">
+        <li class="footer__item"><a href="#" class="footer__link">Faça parte</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Parceiros</a></li>
+      </ul>
+    </div>
+
+    <div class="footer__section footer__section--institutional">
+      <h5 class="footer__title">Institucional</h5>
+      <ul class="footer__list">
+        <li class="footer__item"><a href="#" class="footer__link">Quem somos</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Ajude</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Contato</a></li>
+      </ul>
+    </div>
+
+    <div class="footer__section footer__section--help">
+      <h5 class="footer__title">Central de ajuda</h5>
+      <ul class="footer__list">
+        <li class="footer__item"><a href="#" class="footer__link">Política de Privacidade</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Central de ajuda</a></li>
+      </ul>
+    </div>
+
+  </div>
+    <p class="footer__copywright">©Copyright Matchpet 2025. Todos os direitos reservados</p>
+</footer>
+
     <script src="/js/scripts.js"></script>
   </body>
 </html>
