Fix: Fixed a few typos and wrong closing tags

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                   src="/img/icon_pin.svg"
                   alt="Ícone de alfinete"
                 />
-                <p class="card__description--location">Passo Fundo, RS</p>
+                <p class="card__description--location">Passo Fundo–RS</p>
               </div>
             </div>
 
@@ -459,7 +459,7 @@
         <p class="faq-accordion__footer--paragraph">
           Fique à vontade para nos escrever:
           <span>contato@matchpet.com</span><br />
-          estamos aqui pra ajudar você (e seu futuro pet)!
+          estamos aqui para ajudar você (e seu futuro pet)!
         </p>
       </div>
     </section>
@@ -485,20 +485,19 @@
           </li>
 
           <li class="testimonialCard">
-            <h5 class="testimonialCard__name">Maria Soares</h6>
-            <p class="testimonialCard__location">Florianóplis, SC</p>
-            <p class="testimonialCard__paragraph">O processo é feito com muito amor e carinho Recomendo pra qualquer pessoa que esteja pronta pra amar um pet de verdade</p>
+            <h5 class="testimonialCard__name">Maria Soares</h5>
+            <p class="testimonialCard__location">Florianópolis-SC</p>
+            <p class="testimonialCard__paragraph">O processo é feito com muito amor e carinho Recomendo para qualquer pessoa que esteja pronta para amar um pet de verdade</p>
           </li>
 
           <li class="testimonialCard">
             <h6 class="testimonialCard__name">Joaquim Costa</h6>
-            <p class="testimonialCard__location">Casca, RS</p>
+            <p class="testimonialCard__location">Casca–RS</p>
             <p class="testimonialCard__paragraph">Nunca imaginei que um coelhinho fosse trazer tanta alegria! Adoção responsável, equipe atenciosa e um novo amor na minha vida </p>
           </li>
 
         </ul>
 </div>
-      </div>
     </section>
 
 <footer class="footer">
@@ -552,7 +551,7 @@
     </div>
 
   </div>
-    <p class="footer__copywright">©Copyright Matchpet 2025. Todos os direitos reservados</p>
+    <p class="footer__copyright">©Copyright Matchpet 2025. Todos os direitos reservados</p>
 </footer>
 
     <script src="/js/scripts.js"></script>
