--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           </li>
         </ul>
         <div class="header__right">
-          <button class="navigation__btn btn">Entrar</button>
+          <button class="navigation__btn btn">
+            <a href="login.html">Entrar</a>
+          </button>
         </div>
       </nav>
     </header>
@@ -130,7 +132,7 @@
                   src="/img/icon_pin.svg"
                   alt="Ícone de alfinete"
                 />
-                <p class="card__description--location">Marau, RS</p>
+                <p class="card__description--location">Marau-RS</p>
               </div>
             </div>
 
@@ -476,83 +478,132 @@
         </h3>
       </div>
       <div class="carousel-wrapper">
-      <ul class="carousel">
-        <li class="carousel__spacer"></li>
+        <ul class="carousel">
+          <li class="carousel__spacer"></li>
           <li class="testimonialCard">
             <h6 class="testimonialCard__name">Pedro Eduardo</h6>
             <p class="testimonialCard__location">Marau, RS</p>
-            <p class="testimonialCard__paragraph">Fui buscar companhia e encontrei uma amizade verdadeira graças ao processo de adoção. Agora não largo mais o Fred! </p>
+            <p class="testimonialCard__paragraph">
+              Fui buscar companhia e encontrei uma amizade verdadeira graças ao
+              processo de adoção. Agora não largo mais o Fred!
+            </p>
           </li>
 
           <li class="testimonialCard">
             <h5 class="testimonialCard__name">Maria Soares</h5>
             <p class="testimonialCard__location">Florianópolis-SC</p>
-            <p class="testimonialCard__paragraph">O processo é feito com muito amor e carinho Recomendo para qualquer pessoa que esteja pronta para amar um pet de verdade</p>
+            <p class="testimonialCard__paragraph">
+              O processo é feito com muito amor e carinho Recomendo para
+              qualquer pessoa que esteja pronta para amar um pet de verdade
+            </p>
           </li>
 
           <li class="testimonialCard">
             <h6 class="testimonialCard__name">Joaquim Costa</h6>
             <p class="testimonialCard__location">Casca–RS</p>
-            <p class="testimonialCard__paragraph">Nunca imaginei que um coelhinho fosse trazer tanta alegria! Adoção responsável, equipe atenciosa e um novo amor na minha vida </p>
+            <p class="testimonialCard__paragraph">
+              Nunca imaginei que um coelhinho fosse trazer tanta alegria! Adoção
+              responsável, equipe atenciosa e um novo amor na minha vida
+            </p>
           </li>
-
         </ul>
-</div>
+      </div>
     </section>
 
-<footer class="footer">
+    <footer class="footer">
+      <img
+        src="/img/icon_logo-alternative.svg"
+        class="footer__logo"
+        alt="Logo do MatchPet"
+      />
+      <p class="footer__quote">Mude uma vida: adote!</p>
+      <p class="footer__email">contato@matchpet.com</p>
 
-  <img src="/img/icon_logo-alternative.svg" class="footer__logo" alt="Logo do MatchPet">
-  <p class="footer__quote">Mude uma vida: adote!</p>
-  <p class="footer__email">contato@matchpet.com</p>
+      <div class="footer__socials">
+        <img
+          src="/img/icon_whatsapp.svg"
+          alt="Icone do Whatsapp"
+          class="footer__socials__logo--whatsapp"
+        />
+        <img
+          src="/img/icon_instagram.svg"
+          alt="Icone do Instagram"
+          class="footer__socials__logo--instagram"
+        />
+        <img
+          src="/img/icon_youtube.svg"
+          alt="Icone do Youtube"
+          class="footer__socials__logo--youtube"
+        />
+        <img
+          src="/img/icon_facebook.svg"
+          alt="Icone do Facebook"
+          class="footer__socials__logo--facebook"
+        />
+      </div>
 
-  <div class="footer__socials">
-    <img src="/img/icon_whatsapp.svg" alt="Icone do Whatsapp" class="footer__socials__logo--whatsapp">
-    <img src="/img/icon_instagram.svg" alt="Icone do Instagram" class="footer__socials__logo--instagram">
-    <img src="/img/icon_youtube.svg" alt="Icone do Youtube" class="footer__socials__logo--youtube">
-    <img src="/img/icon_facebook.svg" alt="Icone do Facebook" class="footer__socials__logo--facebook">
-  </div>
+      <div class="footer__links">
+        <div class="footer__section footer__section--pets">
+          <h5 class="footer__title">Nossos Pets</h5>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Cachorros</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Gatos</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Roedores</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Aves</a>
+            </li>
+          </ul>
+        </div>
 
-   <div class="footer__links">
-    
-    <div class="footer__section footer__section--pets">
-      <h5 class="footer__title">Nossos Pets</h5>
-      <ul class="footer__list">
-        <li class="footer__item"><a href="#" class="footer__link">Cachorros</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Gatos</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Roedores</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Aves</a></li>
-      </ul>
-    </div>
+        <div class="footer__section footer__section--solutions">
+          <h5 class="footer__title">Soluções</h5>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Faça parte</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Parceiros</a>
+            </li>
+          </ul>
+        </div>
 
-    <div class="footer__section footer__section--solutions">
-      <h5 class="footer__title">Soluções</h5>
-      <ul class="footer__list">
-        <li class="footer__item"><a href="#" class="footer__link">Faça parte</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Parceiros</a></li>
-      </ul>
-    </div>
+        <div class="footer__section footer__section--institutional">
+          <h5 class="footer__title">Institucional</h5>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Quem somos</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Ajude</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Contato</a>
+            </li>
+          </ul>
+        </div>
 
-    <div class="footer__section footer__section--institutional">
-      <h5 class="footer__title">Institucional</h5>
-      <ul class="footer__list">
-        <li class="footer__item"><a href="#" class="footer__link">Quem somos</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Ajude</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Contato</a></li>
-      </ul>
-    </div>
-
-    <div class="footer__section footer__section--help">
-      <h5 class="footer__title">Central de ajuda</h5>
-      <ul class="footer__list">
-        <li class="footer__item"><a href="#" class="footer__link">Política de Privacidade</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Central de ajuda</a></li>
-      </ul>
-    </div>
-
-  </div>
-    <p class="footer__copyright">©Copyright Matchpet 2025. Todos os direitos reservados</p>
-</footer>
+        <div class="footer__section footer__section--help">
+          <h5 class="footer__title">Central de ajuda</h5>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Política de Privacidade</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Central de ajuda</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <p class="footer__copyright">
+        ©Copyright Matchpet 2025. Todos os direitos reservados
+      </p>
+    </footer>
 
     <script src="/js/scripts.js"></script>
   </body>
